# NeptuneOS

./: .gitignore  CMakeLists.txt  README.md  linker.ld  symbols.txt  user_cat.elf  user_echo.elf  user_fuzz.elf  user_hello.elf  user_init.elf  user_ls.elf  user_shell.elf
.github/workflows/: boot-smoke.yml
cmake/: toolchain-aarch64.cmake
grub/: grub.cfg
kernel/: acpi.c  ata.c  block.c  console.c  elf.c  fat.c  fs.c  heap.c  irq.c  kernel.c  log.c  mem.c  panic.c  pci.c  pipe.c  printf.c  ramfs.c  sched.c  serial.c  spinlock.c  string.c  syscall.c  terminal.c  timer.c  tty.c  user.c  user_images.c  user_images_arm64.inc  user_images_arm64_snippet.c  vfs.c
kernel/arch/aarch64/: fdt.c  gic.c  linker.ld  mmu.c  psci.c  sched.c  serial.c  start.s  stubs.c  switch.s  timer.c  trampolines.s  vectors.c  vectors.s  virtio.c
kernel/arch/aarch64/include/arch/: context.h  gic.h  io.h  mmu.h  processor.h  psci.h
kernel/arch/x86_64/: console.c  gdt.c  gdt.s  hal.c  idt.c  mmu.c  paging.c  pic.c  pit.c  preempt_stub.s  sched.c  serial.c  switch.s  syscall_msr.c  syscall_stub.s
kernel/arch/x86_64/include/arch/: context.h  io.h  mmu.h  processor.h
kernel/boot/: boot.s
kernel/include/drivers/: virtio.h
kernel/include/kernel/: acpi.h  ata.h  block.h  console.h  cpu.h  elf.h  fat.h  fdt.h  fs.h  gdt.h  hal.h  heap.h  idt.h  io.h  irq.h  log.h  mem.h  mmu.h  panic.h  pci.h  pic.h  pipe.h  pit.h  printf.h  ramfs.h  sched.h  serial.h  spinlock.h  syscall.h  terminal.h  timer.h  tty.h  user.h  vfs.h
scripts/: boot-smoke.sh  build-user.sh  build_user_arm64.sh  fuzz.sh  regression.sh  update_images.py
user/: cat.c  echo.c  fuzz.c  hello.c  init.c  libc.c  libc.h  ls.c  shell.c  syscall.h
